CALQULUS-PMS/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calqulusrms
  labels:
    app: calqulusrms
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5173
    protocol: TCP
    name: http
  selector:
    app: calqulusrms
